# IEEPUNE

shield/: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  results.csv
shield/data/: build_large_datasets.py  jailbreak_large.json  multiturn_large.json  privacy_large.json
shield/docs/: api.md  architecture.md
shield/examples/: build_datasets.py  jailbreak_clusters.pkl  sample_image_requests.json  sample_jailbreaks.json  sample_multiturn.json
shield/results/: ablation_large.csv  comparison_results.csv  jailbreak_results.csv  multiturn_results.csv  privacy_results.csv  threshold_sweep_large.csv
shield/results/scores/: keyword_jailbreak.npz  keyword_multiturn.npz  keyword_privacy.npz  shield_jailbreak.npz  shield_multiturn.npz  shield_privacy.npz  toxic_bert_jailbreak.npz  toxic_bert_multiturn.npz  toxic_bert_privacy.npz
shield/scripts/: ablation.py  aggregate_results.py  baselines.py  benchmark.py  benchmark_all_free.py  evaluate.py  evaluate_real.py  full_comparison.py  print_results.py  run_all_experiments.py  run_benchmark_sequential.py  run_missing_baselines.py  run_shield_only.py  run_single_baseline.py  threshold_sweep.py  train_clusters.py  visualize_graph.py
shield/src/shield/: __init__.py  api.py  config.py  main.py
shield/src/shield/core/: __init__.py  calibration.py  clustering.py  decision_fusion.py  embeddings.py  intent_graph.py  jailbreak_detector.py  privacy_predictor.py  risk_matrix.py  utils.py  vector_index.py
(+22 files in other folders)
