[project]
name = "shield"
version = "0.1.0"
description = "Secure Hierarchical Intent Evaluation and Leak Defense"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["src/shield/tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require real models (deselect with '-m \"not integration\"')",
]
addopts = "--strict-markers"
